ProyectoLenguaje/2 - TablaDeSimbolos/EntregableTabSim_A00826544/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMMENT
    ENDIF
    GOSUB
    LOOP
    NEXT
    NOT
    OR
    POWER
    SUBEND

Grammar

Rule 0     S' -> START
Rule 1     START -> PROGRAM V P S PEND
Rule 2     V -> DIM ID AS VARTYPE V
Rule 3     V -> LET ID EQUAL VAR V S
Rule 4     V -> EMPTY
Rule 5     P -> SUBPROCEDURE LPAREN ID RPAREN V P S END
Rule 6     P -> IN LPAREN NUMTYPE RPAREN S
Rule 7     P -> PRINT LPAREN NUMTYPE RPAREN S
Rule 8     P -> EMPTY
Rule 9     S -> IF LPAREN RELEXPR RPAREN THEN S IFELSE END S
Rule 10    IFELSE -> ELSE THEN S
Rule 11    IFELSE -> <empty>
Rule 12    S -> WHILE LPAREN RELEXPR RPAREN S WEND S
Rule 13    S -> DO COLON S WHILE LPAREN RELEXPR RPAREN S
Rule 14    S -> FOR LPAREN RELEXPR RPAREN S END S
Rule 15    S -> O
Rule 16    S -> EMPTY
Rule 17    VARTYPE -> INT
Rule 18    VARTYPE -> FLOAT
Rule 19    VARTYPE -> VECDEF
Rule 20    VARTYPE -> MATDEF
Rule 21    NUMTYPE -> ID
Rule 22    NUMTYPE -> NINT
Rule 23    NUMTYPE -> NFLOAT
Rule 24    VAR -> NINT
Rule 25    VAR -> NFLOAT
Rule 26    VAR -> VECTOR
Rule 27    VAR -> MATRIX
Rule 28    VAR -> ID
Rule 29    VECDEF -> VEC LBRACK RBRACK
Rule 30    MATDEF -> MAT LBRACK RBRACK
Rule 31    VECTOR -> LBRACK NUMTYPE RBRACK
Rule 32    MATRIX -> LBRACK NUMTYPE COMMA NUMTYPE RBRACK
Rule 33    RELEXPR -> VAR LT VAR
Rule 34    RELEXPR -> VAR LE VAR
Rule 35    RELEXPR -> VAR GT VAR
Rule 36    RELEXPR -> VAR GE VAR
Rule 37    RELEXPR -> VAR EQ VAR
Rule 38    RELEXPR -> VAR NE VAR
Rule 39    O -> O EQUAL O
Rule 40    O -> O PLUS TIER1
Rule 41    O -> O MINUS TIER1
Rule 42    TIER1 -> TIER1 MULT TIER2
Rule 43    TIER1 -> TIER1 DIV TIER2
Rule 44    TIER2 -> LPAREN O RPAREN
Rule 45    O -> TIER1
Rule 46    TIER1 -> TIER2
Rule 47    TIER2 -> VAR
Rule 48    EMPTY -> <empty>

Terminals, with rules where they appear

AND                  : 
AS                   : 2
COLON                : 13
COMMA                : 32
COMMENT              : 
DIM                  : 2
DIV                  : 43
DO                   : 13
ELSE                 : 10
END                  : 5 9 14
ENDIF                : 
EQ                   : 37
EQUAL                : 3 39
FLOAT                : 18
FOR                  : 14
GE                   : 36
GOSUB                : 
GT                   : 35
ID                   : 2 3 5 21 28
IF                   : 9
IN                   : 6
INT                  : 17
LBRACK               : 29 30 31 32
LE                   : 34
LET                  : 3
LOOP                 : 
LPAREN               : 5 6 7 9 12 13 14 44
LT                   : 33
MAT                  : 30
MINUS                : 41
MULT                 : 42
NE                   : 38
NEXT                 : 
NFLOAT               : 23 25
NINT                 : 22 24
NOT                  : 
OR                   : 
PEND                 : 1
PLUS                 : 40
POWER                : 
PRINT                : 7
PROGRAM              : 1
RBRACK               : 29 30 31 32
RPAREN               : 5 6 7 9 12 13 14 44
SUBEND               : 
SUBPROCEDURE         : 5
THEN                 : 9 10
VEC                  : 29
WEND                 : 12
WHILE                : 12 13
error                : 

Nonterminals, with rules where they appear

EMPTY                : 4 8 16
IFELSE               : 9
MATDEF               : 20
MATRIX               : 27
NUMTYPE              : 6 7 31 32 32
O                    : 15 39 39 40 41 44
P                    : 1 5
RELEXPR              : 9 12 13 14
S                    : 1 3 5 6 7 9 9 10 12 12 13 13 14 14
START                : 0
TIER1                : 40 41 42 43 45
TIER2                : 42 43 46
V                    : 1 2 3 5
VAR                  : 3 33 33 34 34 35 35 36 36 37 37 38 38 47
VARTYPE              : 2
VECDEF               : 19
VECTOR               : 26

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . PROGRAM V P S PEND

    PROGRAM         shift and go to state 2

    START                          shift and go to state 1

state 1

    (0) S' -> START .



state 2

    (1) START -> PROGRAM . V P S PEND
    (2) V -> . DIM ID AS VARTYPE V
    (3) V -> . LET ID EQUAL VAR V S
    (4) V -> . EMPTY
    (48) EMPTY -> .

    DIM             shift and go to state 4
    LET             shift and go to state 5
    SUBPROCEDURE    reduce using rule 48 (EMPTY -> .)
    IN              reduce using rule 48 (EMPTY -> .)
    PRINT           reduce using rule 48 (EMPTY -> .)
    IF              reduce using rule 48 (EMPTY -> .)
    WHILE           reduce using rule 48 (EMPTY -> .)
    DO              reduce using rule 48 (EMPTY -> .)
    FOR             reduce using rule 48 (EMPTY -> .)
    LPAREN          reduce using rule 48 (EMPTY -> .)
    NINT            reduce using rule 48 (EMPTY -> .)
    NFLOAT          reduce using rule 48 (EMPTY -> .)
    ID              reduce using rule 48 (EMPTY -> .)
    LBRACK          reduce using rule 48 (EMPTY -> .)
    PEND            reduce using rule 48 (EMPTY -> .)

    V                              shift and go to state 3
    EMPTY                          shift and go to state 6

state 3

    (1) START -> PROGRAM V . P S PEND
    (5) P -> . SUBPROCEDURE LPAREN ID RPAREN V P S END
    (6) P -> . IN LPAREN NUMTYPE RPAREN S
    (7) P -> . PRINT LPAREN NUMTYPE RPAREN S
    (8) P -> . EMPTY
    (48) EMPTY -> .

    SUBPROCEDURE    shift and go to state 8
    IN              shift and go to state 9
    PRINT           shift and go to state 10
    IF              reduce using rule 48 (EMPTY -> .)
    WHILE           reduce using rule 48 (EMPTY -> .)
    DO              reduce using rule 48 (EMPTY -> .)
    FOR             reduce using rule 48 (EMPTY -> .)
    LPAREN          reduce using rule 48 (EMPTY -> .)
    NINT            reduce using rule 48 (EMPTY -> .)
    NFLOAT          reduce using rule 48 (EMPTY -> .)
    ID              reduce using rule 48 (EMPTY -> .)
    LBRACK          reduce using rule 48 (EMPTY -> .)
    PEND            reduce using rule 48 (EMPTY -> .)

    P                              shift and go to state 7
    EMPTY                          shift and go to state 11

state 4

    (2) V -> DIM . ID AS VARTYPE V

    ID              shift and go to state 12


state 5

    (3) V -> LET . ID EQUAL VAR V S

    ID              shift and go to state 13


state 6

    (4) V -> EMPTY .

    SUBPROCEDURE    reduce using rule 4 (V -> EMPTY .)
    IN              reduce using rule 4 (V -> EMPTY .)
    PRINT           reduce using rule 4 (V -> EMPTY .)
    IF              reduce using rule 4 (V -> EMPTY .)
    WHILE           reduce using rule 4 (V -> EMPTY .)
    DO              reduce using rule 4 (V -> EMPTY .)
    FOR             reduce using rule 4 (V -> EMPTY .)
    LPAREN          reduce using rule 4 (V -> EMPTY .)
    NINT            reduce using rule 4 (V -> EMPTY .)
    NFLOAT          reduce using rule 4 (V -> EMPTY .)
    ID              reduce using rule 4 (V -> EMPTY .)
    LBRACK          reduce using rule 4 (V -> EMPTY .)
    PEND            reduce using rule 4 (V -> EMPTY .)
    END             reduce using rule 4 (V -> EMPTY .)


state 7

    (1) START -> PROGRAM V P . S PEND
    (9) S -> . IF LPAREN RELEXPR RPAREN THEN S IFELSE END S
    (12) S -> . WHILE LPAREN RELEXPR RPAREN S WEND S
    (13) S -> . DO COLON S WHILE LPAREN RELEXPR RPAREN S
    (14) S -> . FOR LPAREN RELEXPR RPAREN S END S
    (15) S -> . O
    (16) S -> . EMPTY
    (39) O -> . O EQUAL O
    (40) O -> . O PLUS TIER1
    (41) O -> . O MINUS TIER1
    (45) O -> . TIER1
    (48) EMPTY -> .
    (42) TIER1 -> . TIER1 MULT TIER2
    (43) TIER1 -> . TIER1 DIV TIER2
    (46) TIER1 -> . TIER2
    (44) TIER2 -> . LPAREN O RPAREN
    (47) TIER2 -> . VAR
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    IF              shift and go to state 15
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    PEND            reduce using rule 48 (EMPTY -> .)
    LPAREN          shift and go to state 16
    NINT            shift and go to state 25
    NFLOAT          shift and go to state 26
    ID              shift and go to state 29
    LBRACK          shift and go to state 30

    S                              shift and go to state 14
    O                              shift and go to state 20
    EMPTY                          shift and go to state 21
    TIER1                          shift and go to state 22
    TIER2                          shift and go to state 23
    VAR                            shift and go to state 24
    VECTOR                         shift and go to state 27
    MATRIX                         shift and go to state 28

state 8

    (5) P -> SUBPROCEDURE . LPAREN ID RPAREN V P S END

    LPAREN          shift and go to state 31


state 9

    (6) P -> IN . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 32


state 10

    (7) P -> PRINT . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 33


state 11

    (8) P -> EMPTY .

    IF              reduce using rule 8 (P -> EMPTY .)
    WHILE           reduce using rule 8 (P -> EMPTY .)
    DO              reduce using rule 8 (P -> EMPTY .)
    FOR             reduce using rule 8 (P -> EMPTY .)
    LPAREN          reduce using rule 8 (P -> EMPTY .)
    NINT            reduce using rule 8 (P -> EMPTY .)
    NFLOAT          reduce using rule 8 (P -> EMPTY .)
    ID              reduce using rule 8 (P -> EMPTY .)
    LBRACK          reduce using rule 8 (P -> EMPTY .)
    PEND            reduce using rule 8 (P -> EMPTY .)
    END             reduce using rule 8 (P -> EMPTY .)


state 12

    (2) V -> DIM ID . AS VARTYPE V

    AS              shift and go to state 34


state 13

    (3) V -> LET ID . EQUAL VAR V S

    EQUAL           shift and go to state 35


state 14

    (1) START -> PROGRAM V P S . PEND

    PEND            shift and go to state 36


state 15

    (9) S -> IF . LPAREN RELEXPR RPAREN THEN S IFELSE END S

    LPAREN          shift and go to state 37


state 16

    (44) TIER2 -> LPAREN . O RPAREN
    (39) O -> . O EQUAL O
    (40) O -> . O PLUS TIER1
    (41) O -> . O MINUS TIER1
    (45) O -> . TIER1
    (42) TIER1 -> . TIER1 MULT TIER2
    (43) TIER1 -> . TIER1 DIV TIER2
    (46) TIER1 -> . TIER2
    (44) TIER2 -> . LPAREN O RPAREN
    (47) TIER2 -> . VAR
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    LPAREN          shift and go to state 16
    NINT            shift and go to state 25
    NFLOAT          shift and go to state 26
    ID              shift and go to state 29
    LBRACK          shift and go to state 30

    O                              shift and go to state 38
    TIER1                          shift and go to state 22
    TIER2                          shift and go to state 23
    VAR                            shift and go to state 24
    VECTOR                         shift and go to state 27
    MATRIX                         shift and go to state 28

state 17

    (12) S -> WHILE . LPAREN RELEXPR RPAREN S WEND S

    LPAREN          shift and go to state 39


state 18

    (13) S -> DO . COLON S WHILE LPAREN RELEXPR RPAREN S

    COLON           shift and go to state 40


state 19

    (14) S -> FOR . LPAREN RELEXPR RPAREN S END S

    LPAREN          shift and go to state 41


state 20

    (15) S -> O .
    (39) O -> O . EQUAL O
    (40) O -> O . PLUS TIER1
    (41) O -> O . MINUS TIER1

    PEND            reduce using rule 15 (S -> O .)
    WHILE           reduce using rule 15 (S -> O .)
    IF              reduce using rule 15 (S -> O .)
    DO              reduce using rule 15 (S -> O .)
    FOR             reduce using rule 15 (S -> O .)
    LPAREN          reduce using rule 15 (S -> O .)
    NINT            reduce using rule 15 (S -> O .)
    NFLOAT          reduce using rule 15 (S -> O .)
    ID              reduce using rule 15 (S -> O .)
    LBRACK          reduce using rule 15 (S -> O .)
    END             reduce using rule 15 (S -> O .)
    SUBPROCEDURE    reduce using rule 15 (S -> O .)
    IN              reduce using rule 15 (S -> O .)
    PRINT           reduce using rule 15 (S -> O .)
    WEND            reduce using rule 15 (S -> O .)
    ELSE            reduce using rule 15 (S -> O .)
    EQUAL           shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44


state 21

    (16) S -> EMPTY .

    PEND            reduce using rule 16 (S -> EMPTY .)
    WHILE           reduce using rule 16 (S -> EMPTY .)
    IF              reduce using rule 16 (S -> EMPTY .)
    DO              reduce using rule 16 (S -> EMPTY .)
    FOR             reduce using rule 16 (S -> EMPTY .)
    LPAREN          reduce using rule 16 (S -> EMPTY .)
    NINT            reduce using rule 16 (S -> EMPTY .)
    NFLOAT          reduce using rule 16 (S -> EMPTY .)
    ID              reduce using rule 16 (S -> EMPTY .)
    LBRACK          reduce using rule 16 (S -> EMPTY .)
    END             reduce using rule 16 (S -> EMPTY .)
    SUBPROCEDURE    reduce using rule 16 (S -> EMPTY .)
    IN              reduce using rule 16 (S -> EMPTY .)
    PRINT           reduce using rule 16 (S -> EMPTY .)
    WEND            reduce using rule 16 (S -> EMPTY .)
    ELSE            reduce using rule 16 (S -> EMPTY .)


state 22

    (45) O -> TIER1 .
    (42) TIER1 -> TIER1 . MULT TIER2
    (43) TIER1 -> TIER1 . DIV TIER2

    EQUAL           reduce using rule 45 (O -> TIER1 .)
    PLUS            reduce using rule 45 (O -> TIER1 .)
    MINUS           reduce using rule 45 (O -> TIER1 .)
    PEND            reduce using rule 45 (O -> TIER1 .)
    RPAREN          reduce using rule 45 (O -> TIER1 .)
    WHILE           reduce using rule 45 (O -> TIER1 .)
    IF              reduce using rule 45 (O -> TIER1 .)
    DO              reduce using rule 45 (O -> TIER1 .)
    FOR             reduce using rule 45 (O -> TIER1 .)
    LPAREN          reduce using rule 45 (O -> TIER1 .)
    NINT            reduce using rule 45 (O -> TIER1 .)
    NFLOAT          reduce using rule 45 (O -> TIER1 .)
    ID              reduce using rule 45 (O -> TIER1 .)
    LBRACK          reduce using rule 45 (O -> TIER1 .)
    END             reduce using rule 45 (O -> TIER1 .)
    SUBPROCEDURE    reduce using rule 45 (O -> TIER1 .)
    IN              reduce using rule 45 (O -> TIER1 .)
    PRINT           reduce using rule 45 (O -> TIER1 .)
    WEND            reduce using rule 45 (O -> TIER1 .)
    ELSE            reduce using rule 45 (O -> TIER1 .)
    MULT            shift and go to state 45
    DIV             shift and go to state 46


state 23

    (46) TIER1 -> TIER2 .

    MULT            reduce using rule 46 (TIER1 -> TIER2 .)
    DIV             reduce using rule 46 (TIER1 -> TIER2 .)
    EQUAL           reduce using rule 46 (TIER1 -> TIER2 .)
    PLUS            reduce using rule 46 (TIER1 -> TIER2 .)
    MINUS           reduce using rule 46 (TIER1 -> TIER2 .)
    PEND            reduce using rule 46 (TIER1 -> TIER2 .)
    RPAREN          reduce using rule 46 (TIER1 -> TIER2 .)
    WHILE           reduce using rule 46 (TIER1 -> TIER2 .)
    IF              reduce using rule 46 (TIER1 -> TIER2 .)
    DO              reduce using rule 46 (TIER1 -> TIER2 .)
    FOR             reduce using rule 46 (TIER1 -> TIER2 .)
    LPAREN          reduce using rule 46 (TIER1 -> TIER2 .)
    NINT            reduce using rule 46 (TIER1 -> TIER2 .)
    NFLOAT          reduce using rule 46 (TIER1 -> TIER2 .)
    ID              reduce using rule 46 (TIER1 -> TIER2 .)
    LBRACK          reduce using rule 46 (TIER1 -> TIER2 .)
    END             reduce using rule 46 (TIER1 -> TIER2 .)
    SUBPROCEDURE    reduce using rule 46 (TIER1 -> TIER2 .)
    IN              reduce using rule 46 (TIER1 -> TIER2 .)
    PRINT           reduce using rule 46 (TIER1 -> TIER2 .)
    WEND            reduce using rule 46 (TIER1 -> TIER2 .)
    ELSE            reduce using rule 46 (TIER1 -> TIER2 .)


state 24

    (47) TIER2 -> VAR .

    MULT            reduce using rule 47 (TIER2 -> VAR .)
    DIV             reduce using rule 47 (TIER2 -> VAR .)
    EQUAL           reduce using rule 47 (TIER2 -> VAR .)
    PLUS            reduce using rule 47 (TIER2 -> VAR .)
    MINUS           reduce using rule 47 (TIER2 -> VAR .)
    PEND            reduce using rule 47 (TIER2 -> VAR .)
    RPAREN          reduce using rule 47 (TIER2 -> VAR .)
    WHILE           reduce using rule 47 (TIER2 -> VAR .)
    IF              reduce using rule 47 (TIER2 -> VAR .)
    DO              reduce using rule 47 (TIER2 -> VAR .)
    FOR             reduce using rule 47 (TIER2 -> VAR .)
    LPAREN          reduce using rule 47 (TIER2 -> VAR .)
    NINT            reduce using rule 47 (TIER2 -> VAR .)
    NFLOAT          reduce using rule 47 (TIER2 -> VAR .)
    ID              reduce using rule 47 (TIER2 -> VAR .)
    LBRACK          reduce using rule 47 (TIER2 -> VAR .)
    END             reduce using rule 47 (TIER2 -> VAR .)
    SUBPROCEDURE    reduce using rule 47 (TIER2 -> VAR .)
    IN              reduce using rule 47 (TIER2 -> VAR .)
    PRINT           reduce using rule 47 (TIER2 -> VAR .)
    WEND            reduce using rule 47 (TIER2 -> VAR .)
    ELSE            reduce using rule 47 (TIER2 -> VAR .)


state 25

    (24) VAR -> NINT .

    MULT            reduce using rule 24 (VAR -> NINT .)
    DIV             reduce using rule 24 (VAR -> NINT .)
    EQUAL           reduce using rule 24 (VAR -> NINT .)
    PLUS            reduce using rule 24 (VAR -> NINT .)
    MINUS           reduce using rule 24 (VAR -> NINT .)
    PEND            reduce using rule 24 (VAR -> NINT .)
    RPAREN          reduce using rule 24 (VAR -> NINT .)
    DIM             reduce using rule 24 (VAR -> NINT .)
    LET             reduce using rule 24 (VAR -> NINT .)
    IF              reduce using rule 24 (VAR -> NINT .)
    WHILE           reduce using rule 24 (VAR -> NINT .)
    DO              reduce using rule 24 (VAR -> NINT .)
    FOR             reduce using rule 24 (VAR -> NINT .)
    LPAREN          reduce using rule 24 (VAR -> NINT .)
    NINT            reduce using rule 24 (VAR -> NINT .)
    NFLOAT          reduce using rule 24 (VAR -> NINT .)
    ID              reduce using rule 24 (VAR -> NINT .)
    LBRACK          reduce using rule 24 (VAR -> NINT .)
    SUBPROCEDURE    reduce using rule 24 (VAR -> NINT .)
    IN              reduce using rule 24 (VAR -> NINT .)
    PRINT           reduce using rule 24 (VAR -> NINT .)
    END             reduce using rule 24 (VAR -> NINT .)
    LT              reduce using rule 24 (VAR -> NINT .)
    LE              reduce using rule 24 (VAR -> NINT .)
    GT              reduce using rule 24 (VAR -> NINT .)
    GE              reduce using rule 24 (VAR -> NINT .)
    EQ              reduce using rule 24 (VAR -> NINT .)
    NE              reduce using rule 24 (VAR -> NINT .)
    WEND            reduce using rule 24 (VAR -> NINT .)
    ELSE            reduce using rule 24 (VAR -> NINT .)


state 26

    (25) VAR -> NFLOAT .

    MULT            reduce using rule 25 (VAR -> NFLOAT .)
    DIV             reduce using rule 25 (VAR -> NFLOAT .)
    EQUAL           reduce using rule 25 (VAR -> NFLOAT .)
    PLUS            reduce using rule 25 (VAR -> NFLOAT .)
    MINUS           reduce using rule 25 (VAR -> NFLOAT .)
    PEND            reduce using rule 25 (VAR -> NFLOAT .)
    RPAREN          reduce using rule 25 (VAR -> NFLOAT .)
    DIM             reduce using rule 25 (VAR -> NFLOAT .)
    LET             reduce using rule 25 (VAR -> NFLOAT .)
    IF              reduce using rule 25 (VAR -> NFLOAT .)
    WHILE           reduce using rule 25 (VAR -> NFLOAT .)
    DO              reduce using rule 25 (VAR -> NFLOAT .)
    FOR             reduce using rule 25 (VAR -> NFLOAT .)
    LPAREN          reduce using rule 25 (VAR -> NFLOAT .)
    NINT            reduce using rule 25 (VAR -> NFLOAT .)
    NFLOAT          reduce using rule 25 (VAR -> NFLOAT .)
    ID              reduce using rule 25 (VAR -> NFLOAT .)
    LBRACK          reduce using rule 25 (VAR -> NFLOAT .)
    SUBPROCEDURE    reduce using rule 25 (VAR -> NFLOAT .)
    IN              reduce using rule 25 (VAR -> NFLOAT .)
    PRINT           reduce using rule 25 (VAR -> NFLOAT .)
    END             reduce using rule 25 (VAR -> NFLOAT .)
    LT              reduce using rule 25 (VAR -> NFLOAT .)
    LE              reduce using rule 25 (VAR -> NFLOAT .)
    GT              reduce using rule 25 (VAR -> NFLOAT .)
    GE              reduce using rule 25 (VAR -> NFLOAT .)
    EQ              reduce using rule 25 (VAR -> NFLOAT .)
    NE              reduce using rule 25 (VAR -> NFLOAT .)
    WEND            reduce using rule 25 (VAR -> NFLOAT .)
    ELSE            reduce using rule 25 (VAR -> NFLOAT .)


state 27

    (26) VAR -> VECTOR .

    MULT            reduce using rule 26 (VAR -> VECTOR .)
    DIV             reduce using rule 26 (VAR -> VECTOR .)
    EQUAL           reduce using rule 26 (VAR -> VECTOR .)
    PLUS            reduce using rule 26 (VAR -> VECTOR .)
    MINUS           reduce using rule 26 (VAR -> VECTOR .)
    PEND            reduce using rule 26 (VAR -> VECTOR .)
    RPAREN          reduce using rule 26 (VAR -> VECTOR .)
    DIM             reduce using rule 26 (VAR -> VECTOR .)
    LET             reduce using rule 26 (VAR -> VECTOR .)
    IF              reduce using rule 26 (VAR -> VECTOR .)
    WHILE           reduce using rule 26 (VAR -> VECTOR .)
    DO              reduce using rule 26 (VAR -> VECTOR .)
    FOR             reduce using rule 26 (VAR -> VECTOR .)
    LPAREN          reduce using rule 26 (VAR -> VECTOR .)
    NINT            reduce using rule 26 (VAR -> VECTOR .)
    NFLOAT          reduce using rule 26 (VAR -> VECTOR .)
    ID              reduce using rule 26 (VAR -> VECTOR .)
    LBRACK          reduce using rule 26 (VAR -> VECTOR .)
    SUBPROCEDURE    reduce using rule 26 (VAR -> VECTOR .)
    IN              reduce using rule 26 (VAR -> VECTOR .)
    PRINT           reduce using rule 26 (VAR -> VECTOR .)
    END             reduce using rule 26 (VAR -> VECTOR .)
    LT              reduce using rule 26 (VAR -> VECTOR .)
    LE              reduce using rule 26 (VAR -> VECTOR .)
    GT              reduce using rule 26 (VAR -> VECTOR .)
    GE              reduce using rule 26 (VAR -> VECTOR .)
    EQ              reduce using rule 26 (VAR -> VECTOR .)
    NE              reduce using rule 26 (VAR -> VECTOR .)
    WEND            reduce using rule 26 (VAR -> VECTOR .)
    ELSE            reduce using rule 26 (VAR -> VECTOR .)


state 28

    (27) VAR -> MATRIX .

    MULT            reduce using rule 27 (VAR -> MATRIX .)
    DIV             reduce using rule 27 (VAR -> MATRIX .)
    EQUAL           reduce using rule 27 (VAR -> MATRIX .)
    PLUS            reduce using rule 27 (VAR -> MATRIX .)
    MINUS           reduce using rule 27 (VAR -> MATRIX .)
    PEND            reduce using rule 27 (VAR -> MATRIX .)
    RPAREN          reduce using rule 27 (VAR -> MATRIX .)
    DIM             reduce using rule 27 (VAR -> MATRIX .)
    LET             reduce using rule 27 (VAR -> MATRIX .)
    IF              reduce using rule 27 (VAR -> MATRIX .)
    WHILE           reduce using rule 27 (VAR -> MATRIX .)
    DO              reduce using rule 27 (VAR -> MATRIX .)
    FOR             reduce using rule 27 (VAR -> MATRIX .)
    LPAREN          reduce using rule 27 (VAR -> MATRIX .)
    NINT            reduce using rule 27 (VAR -> MATRIX .)
    NFLOAT          reduce using rule 27 (VAR -> MATRIX .)
    ID              reduce using rule 27 (VAR -> MATRIX .)
    LBRACK          reduce using rule 27 (VAR -> MATRIX .)
    SUBPROCEDURE    reduce using rule 27 (VAR -> MATRIX .)
    IN              reduce using rule 27 (VAR -> MATRIX .)
    PRINT           reduce using rule 27 (VAR -> MATRIX .)
    END             reduce using rule 27 (VAR -> MATRIX .)
    LT              reduce using rule 27 (VAR -> MATRIX .)
    LE              reduce using rule 27 (VAR -> MATRIX .)
    GT              reduce using rule 27 (VAR -> MATRIX .)
    GE              reduce using rule 27 (VAR -> MATRIX .)
    EQ              reduce using rule 27 (VAR -> MATRIX .)
    NE              reduce using rule 27 (VAR -> MATRIX .)
    WEND            reduce using rule 27 (VAR -> MATRIX .)
    ELSE            reduce using rule 27 (VAR -> MATRIX .)


state 29

    (28) VAR -> ID .

    MULT            reduce using rule 28 (VAR -> ID .)
    DIV             reduce using rule 28 (VAR -> ID .)
    EQUAL           reduce using rule 28 (VAR -> ID .)
    PLUS            reduce using rule 28 (VAR -> ID .)
    MINUS           reduce using rule 28 (VAR -> ID .)
    PEND            reduce using rule 28 (VAR -> ID .)
    RPAREN          reduce using rule 28 (VAR -> ID .)
    DIM             reduce using rule 28 (VAR -> ID .)
    LET             reduce using rule 28 (VAR -> ID .)
    IF              reduce using rule 28 (VAR -> ID .)
    WHILE           reduce using rule 28 (VAR -> ID .)
    DO              reduce using rule 28 (VAR -> ID .)
    FOR             reduce using rule 28 (VAR -> ID .)
    LPAREN          reduce using rule 28 (VAR -> ID .)
    NINT            reduce using rule 28 (VAR -> ID .)
    NFLOAT          reduce using rule 28 (VAR -> ID .)
    ID              reduce using rule 28 (VAR -> ID .)
    LBRACK          reduce using rule 28 (VAR -> ID .)
    SUBPROCEDURE    reduce using rule 28 (VAR -> ID .)
    IN              reduce using rule 28 (VAR -> ID .)
    PRINT           reduce using rule 28 (VAR -> ID .)
    END             reduce using rule 28 (VAR -> ID .)
    LT              reduce using rule 28 (VAR -> ID .)
    LE              reduce using rule 28 (VAR -> ID .)
    GT              reduce using rule 28 (VAR -> ID .)
    GE              reduce using rule 28 (VAR -> ID .)
    EQ              reduce using rule 28 (VAR -> ID .)
    NE              reduce using rule 28 (VAR -> ID .)
    WEND            reduce using rule 28 (VAR -> ID .)
    ELSE            reduce using rule 28 (VAR -> ID .)


state 30

    (31) VECTOR -> LBRACK . NUMTYPE RBRACK
    (32) MATRIX -> LBRACK . NUMTYPE COMMA NUMTYPE RBRACK
    (21) NUMTYPE -> . ID
    (22) NUMTYPE -> . NINT
    (23) NUMTYPE -> . NFLOAT

